<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:flow_verticalGap="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NameInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_NameInput_Title" />

        <EditText
            android:id="@+id/NameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/LastNameInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_LastNameInput_Title" />

        <EditText
            android:id="@+id/LastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/FacultadInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_FacultadInput_Title" />

        <Spinner
            android:id="@+id/FacultadInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/EmailInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_EmailInput_Title" />

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/PasswordInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_PasswordInput_Title" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/PasswordConfirmInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_PasswordConfirmInput_Title" />

        <EditText
            android:id="@+id/PasswordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterUser_RegisterBtn_Text" />

        <TextView
            android:id="@+id/BackToLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:text="@string/RegisterUser_BackToLogin_Text"
            android:textAlignment="textStart"
            android:textColor="@color/UniGrub_Blue"
            android:textSize="15dp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>